--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,1 +1,195 @@
 /* YOUR CSS HERE */
+*{
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+body{
+    background-color: #f8f9fa;
+    margin: 0; 
+    padding: 0 10px;
+}
+main{
+    position: relative;
+}
+.up-btn{
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    border: none;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background-color: rgb(213, 202, 190);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+.up-btn svg{
+    fill: rgb(85, 81, 70);
+}
+
+/* Header */
+.logo img{
+    max-width: 100px;
+}
+
+.header nav{
+    display: flex; 
+    align-items: center;
+    justify-content: space-between;
+    max-height: 50px;
+}
+
+.cart-logo{
+    background-color: #607fc6;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    display: flex;
+}
+.cart-logo svg{
+    margin: auto;
+    fill: #eff4f8;
+}
+
+
+/* Product Items */
+.content{
+    margin-top: 30px;
+}
+.product-list{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    gap: 10px;
+    margin: auto;
+    grid-auto-rows: 400px;
+}
+
+.product{
+    font-family: "Nunito", sans-serif;
+    margin: 0 0 30px 0;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+}
+.product h3{
+    font-size: 14px;
+    margin: 0;
+}
+.price{
+    font-size: 12px;
+    margin: 0;
+}
+.img-div img{
+    width: 125px;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    object-fit: cover;
+    height: auto;
+    border-radius: 10px;
+}
+.img-div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    height: 260px;
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+.description{
+    position: absolute;
+    top:0;
+    width: 150px;
+    height: 0;
+    border-radius: 10px;
+    background-color: rgba(96, 127, 198, 0.90);
+    transition: all .5s ease-in-out;
+    opacity: 0;
+    height: 250px;
+    overflow-y: auto;
+    /* text-overflow: ellipsis " [..]"; */
+
+}
+
+.description p{
+    margin: 0;
+    font-size: 12px;
+    padding: 10px;
+}
+
+.description::-webkit-scrollbar{
+    display: none;
+}
+
+.add-btn{
+    background-color: #607fc6;
+    border-radius: 10px;
+    border: none;
+    height: 25px;
+    width: 100px;
+    color: #eff4f8;
+    transition: all .5s ease-in-out;
+}
+
+.add-btn:hover{
+    cursor: pointer;
+    background-color: #eff4f8;
+    color: #607fc6;
+}
+/* cart! */
+
+.cart{
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 10px 25px;
+    font-family: "Nunito", sans-serif;
+}
+.cart li{
+    list-style: none;
+}
+
+.item-price{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cart-items img{
+    max-width: 200px;
+}
+
+
+
+
+/* footer */
+.footer{
+    font-family: "Nunito", sans-serif;
+    text-align: center;
+}
+
+/* For bigger screens  */
+@media only screen and (min-width: 1200px){
+    main{
+        display: flex;
+        flex-direction: row-reverse;
+        gap:20px;
+    }
+
+
+
+    /* cart */
+    .cart{
+        align-self: start;
+        width: 600px;
+    }
+} 
